modules/gdscript/tests/scripts/parser/errors/identifier_similar_to_keyword.gd
func test():
	var аs # Using Cyrillic "а".
	print(аs)
